influxdb logging fixed